# FasterTransformer

./: .clang-format  .dockerignore  .flake8  .gitignore  .gitlab-ci.yml  .gitmodules  Bloom-Together-Dockerfile  CMakeLists.txt  CONTRIBUTING.md  README.md  build_release.sh  change_git_config.sh  compare_npy_files.py  convert_hf_gpt_2_ft.sh  ft_hf_fp16_diff.md  hf_gpt2.py  launch_script.sh  read_npy.py  requirement.txt
examples/cpp/: CMakeLists.txt
examples/cpp/bart/: CMakeLists.txt  bart_triton_example.cc  config.ini  start_ids.csv
examples/cpp/bert/: CMakeLists.txt  bert_config.ini  bert_example.cc  bert_triton_example.cc
examples/cpp/bert_fp8/: CMakeLists.txt  bert_fp8_example.cc  bert_fp8_example_squad.cc
examples/cpp/bert_int8/: CMakeLists.txt  bert_int8_example.cc
examples/cpp/decoding/: CMakeLists.txt  decoding_example.cc  layernorm_test.cc
examples/cpp/gpt/: CMakeLists.txt  gpt_config.ini  gpt_example.cc  start_ids.csv
examples/cpp/gpt_fp8/: CMakeLists.txt  gpt_config.ini  gpt_fp8_example.cc  gpt_fp8_triton_example.cc  start_ids.csv
examples/cpp/gptj/: CMakeLists.txt  bad_words.csv  gptj_config.ini  gptj_example.cc  gptj_triton_example.cc  stop_words.csv
examples/cpp/gptneox/: CMakeLists.txt  gptneox_config.ini  gptneox_example.cc  gptneox_triton_example.cc  start_ids.csv
examples/cpp/llama/: CMakeLists.txt  backup.csv  check_with_huggingface.py  gemm_config.in  huggingface_llama_convert.py  llama_config.ini  llama_decoder.py  llama_example.cc  llama_example_utils.cc  llama_example_utils.h  llama_fid_example.cc  llama_fid_triton_example.cc  llama_triton_example.cc  model_config.json  start_ids.csv  start_ids2.csv  stop_words.csv
examples/cpp/m2m/: CMakeLists.txt  config.ini  m2m_triton_example.cc  start_ids.csv
examples/cpp/multi_gpu_gpt/: CMakeLists.txt  concat_interactive_ids.csv  gpt_config.ini  gpt_example_utils.cc  gpt_example_utils.h  interactive_inputs_ids.csv  multi_gpu_gpt_async_example.cc  multi_gpu_gpt_example.cc  multi_gpu_gpt_interactive_example.cc  multi_gpu_gpt_triton_example.cc  multi_gpu_multi_thread_gpt_example.cc  start_ids.csv  start_ids_opt.csv
examples/cpp/swin/: CMakeLists.txt  functions.h  swin_example.cc  swin_test.cc
examples/cpp/swin_int8/: CMakeLists.txt  swin_int8_example.cc
examples/cpp/vit/: CMakeLists.txt  vit_example.cc
examples/cpp/vit_int8/: CMakeLists.txt  vit_int8_example.cc
examples/cpp/wenet/: CMakeLists.txt  wenet_decoder_example.cc  wenet_encoder_example.cc
examples/cpp/xlnet/: CMakeLists.txt  cnpy.cpp  cnpy.h  xlnet_correctness_example.cc  xlnet_example.cc
fastertransformer/triton_backend/: CMakeLists.txt  gpt_triton_backend.cc  gpt_triton_backend.hpp  transformer.hpp
fastertransformer/utils/: CMakeLists.txt  allocator.h  arguments.h  common.h  common_structure.h  functions.h  nccl_utils.cpp  nccl_utils.h  nvtx_utils.h  utils.h
sample/cpp/: CMakeLists.txt  decoding_beamsearch_sample.cc  decoding_sampling_sample.cc  encoder_sample.cc  gpt_config.ini  gpt_sample.cc  gpt_sample_single_gpu.cc  gpt_thread_sample.cc  gpt_triton_sample.cc
src/fastertransformer/kernels/: CMakeLists.txt  activation_fp8_kernels.cu  activation_fp8_kernels.h  activation_int8_kernels.cu  activation_int8_kernels.h  activation_kernels.cu  activation_kernels.h  add_bias_transpose_kernels.cu  add_bias_transpose_kernels.h  add_residual_kernels.cu  add_residual_kernels.h  ban_bad_words.cu  ban_bad_words.h  beam_search_penalty_kernels.cu  beam_search_penalty_kernels.h  beam_search_topk_kernels.cu  beam_search_topk_kernels.h  bert_preprocess_kernels.cu  bert_preprocess_kernels.h  bfloat16_fallback_kenrels.cuh  calibrate_quantize_weight_kernels.cu  calibrate_quantize_weight_kernels.h  custom_ar_kernels.cu  custom_ar_kernels.h  decoder_masked_multihead_attention.cu  decoder_masked_multihead_attention.h  decoder_masked_multihead_attention_fp8_test.cc  decoder_masked_multihead_attention_utils.h  decoding_kernels.cu  decoding_kernels.h  dequantize_kernels.cu  dequantize_kernels.h  disentangled_attention_kernels.cu  disentangled_attention_kernels.h  gen_relative_pos_bias.cu  gen_relative_pos_bias.h  gpt_kernels.cu  gpt_kernels.h  image_merge_kernels.cu  image_merge_kernels.h  (+66 more)
src/fastertransformer/layers/: BaseLayer.h  CMakeLists.txt  DenseWeight.h  DynamicDecodeBaseLayer.h  DynamicDecodeLayer.cc  DynamicDecodeLayer.h  FfnFP8Layer.cc  FfnFP8Layer.h  FfnFP8Weight.h  FfnINT8Weight.h  FfnLayer.cc  FfnLayer.h  FfnLayerINT8.cc  FfnLayerINT8.h  FfnWeight.h  TensorParallelGeluFfnFP8Layer.cc  TensorParallelGeluFfnFP8Layer.h  TensorParallelGeluFfnLayer.cc  TensorParallelGeluFfnLayer.h  TensorParallelReluFfnLayer.cc  TensorParallelReluFfnLayer.h  TensorParallelSiluFfnLayer.cc  TensorParallelSiluFfnLayer.h
src/fastertransformer/models/: BaseWeight.h  CMakeLists.txt
src/fastertransformer/tf_op/: BaseOp.h  CMakeLists.txt
src/fastertransformer/th_op/: CMakeLists.txt  th_traits.h  th_utils.cu  th_utils.h
src/fastertransformer/utils/: CMakeLists.txt  IA3.h  ScaleList.h  Tensor.cc  Tensor.h  activation_types.h  allocator.h  conv2d.h  convert_data_type.h  cublasAlgoMap.cc  cublasAlgoMap.h  cublasFP8MMWrapper.cu  cublasFP8MMWrapper.h  cublasINT8MMWrapper.cc  cublasINT8MMWrapper.h  cublasMMWrapper.cc  cublasMMWrapper.h  cuda_bf16_fallbacks.cuh  cuda_bf16_wrapper.h  cuda_fp8_utils.cu  cuda_fp8_utils.h  cuda_type_utils.cuh  cuda_utils.cc  cuda_utils.h  custom_ar_comm.cc  custom_ar_comm.h  gemm.cc  gemm.h  gpu_buf.h  llama_utils.h  logger.cc  logger.h  memory_utils.cu  memory_utils.h  mpi_utils.cc  mpi_utils.h  nccl_utils.cc  nccl_utils.h  nvtx_utils.cc  nvtx_utils.h  (+7 more)
tests/gemm_dequantize/: CMakeLists.txt  th_gemm_dequantize.cc  th_gemm_dequantize.py
tests/int8_gemm/: CMakeLists.txt  int8_gemm_test.cu
tests/unittests/: CMakeLists.txt  gtest_utils.h  test_activation.cu  test_attention_kernels.cu  test_context_decoder_layer.cu  test_gemm.cu  test_gpt_kernels.cu  test_int8.cu  test_logprob_kernels.cu  test_penalty_kernels.cu  test_sampling.cu  test_sampling_kernels.cu  test_sampling_layer.cu  test_tensor.cu  unittest_utils.h
(+1056 files in other folders)
